; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/bvm/extr_bvm_console.c_bvm_tty_outwakeup.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/bvm/extr_bvm_console.c_bvm_tty_outwakeup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tty = type { i32 }

@BVMBURSTLEN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.tty*)* @bvm_tty_outwakeup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bvm_tty_outwakeup(%struct.tty* %0) #0 {
  %2 = alloca %struct.tty*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  store %struct.tty* %0, %struct.tty** %2, align 8
  %7 = load i32, i32* @BVMBURSTLEN, align 4
  %8 = zext i32 %7 to i64
  %9 = call i8* @llvm.stacksave()
  store i8* %9, i8** %5, align 8
  %10 = alloca i32, i64 %8, align 16
  store i64 %8, i64* %6, align 8
  br label %11

11:                                               ; preds = %31, %1
  %12 = load %struct.tty*, %struct.tty** %2, align 8
  %13 = mul nuw i64 4, %8
  %14 = trunc i64 %13 to i32
  %15 = call i32 @ttydisc_getc(%struct.tty* %12, i32* %10, i32 %14)
  store i32 %15, i32* %3, align 4
  %16 = load i32, i32* %3, align 4
  %17 = icmp eq i32 %16, 0
  br i1 %17, label %18, label %19

18:                                               ; preds = %11
  br label %32

19:                                               ; preds = %11
  store i32 0, i32* %4, align 4
  br label %20

20:                                               ; preds = %24, %19
  %21 = load i32, i32* %4, align 4
  %22 = load i32, i32* %3, align 4
  %23 = icmp slt i32 %21, %22
  br i1 %23, label %24, label %31

24:                                               ; preds = %20
  %25 = load i32, i32* %4, align 4
  %26 = add nsw i32 %25, 1
  store i32 %26, i32* %4, align 4
  %27 = sext i32 %25 to i64
  %28 = getelementptr inbounds i32, i32* %10, i64 %27
  %29 = load i32, i32* %28, align 4
  %30 = call i32 @bvm_wcons(i32 %29)
  br label %20

31:                                               ; preds = %20
  br label %11

32:                                               ; preds = %18
  %33 = load i8*, i8** %5, align 8
  call void @llvm.stackrestore(i8* %33)
  ret void
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @ttydisc_getc(%struct.tty*, i32*, i32) #2

declare dso_local i32 @bvm_wcons(i32) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
